# gribs_mcp

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/gribs_mcp/: __init__.py  __main__.py  auth.py  client.py  models.py  parsers.py  server.py
tests/: conftest.py  test_client.py  test_helpers.py  test_models.py  test_parsers.py
tests/fixtures/: expand_structure_intermediate_response.json  expand_structure_leaf.html  expand_structure_leaf_response.json  expand_structure_subcategories.html  member_page_wp_19880.html  post_body_with_downloads.html  postwidgetfill_3103.html  postwidgetfill_3201.html  postwidgetfill_3202.html  postwidgetfill_3203.html  recentposts.html  search_response.html  singlepost_response.json  singlepost_stale_views.json  structure_response.html  structure_response.json
